Add controller and service stubs, add mongoose schema and update api spec
